# eeg-feature-robustness

./: .gitignore  Makefile  README.md  dataset_notes.txt  pyproject.toml  requirements.txt  research_log.txt
.github/workflows/: ci.yml
data/: README.md  README.txt
notebooks/: 01_data_exploration.ipynb
paper/: eeg_feature_robustness.md  eeg_feature_robustness.tex
results/: README.md  all_results.json  bci2a_X.npy  bci2a_per_subject_results.json  bci2a_y.npy  bci_A.npy  bci_B.npy  bci_C.npy  main_experiment_results.json  phys_A.npy  phys_B.npy  phys_C.npy  physionet_X.npy  physionet_subject_results.json  statistical_summary.json  table1_within.csv  table2_cross.csv
results/metadata/: bci2a_trial_metadata.csv  physionet_trial_metadata.csv
results/tables/: cross_dataset_results.csv  within_dataset_results.csv
src/: analysis.py  experiment.py  features.py  loader.py  models.py  preprocess.py
src/eeg_feature_robustness/: __init__.py  config.py  features.py  figures.py  models.py  pipeline.py  preprocessing.py
tests/: test_features.py  test_models.py
